# openn

./: CMakeLists.txt
examples/: conv-openn.cc  hello-openn.cc
open-nn/: activations.cc  activations.h  callbacks.h  constraints.h  datasets.cc  datasets.h  initializers.h  layers.h  losses.cc  losses.h  metrics.cc  metrics.h  models.cc  models.h  openn.cc  openn.h  optimizers.h  regularizers.cc  regularizers.h  tensor.h
open-nn/callbacks/: base_logger.cc
open-nn/initializers/: zeros.cc
open-nn/optimizers/: adamax.cc
